Update 'sn121vhkj-go' component image to: quay.io/rhtaptestqa/rhtap-qe:f16ff9cf343af98b25898ac35cc3f80af770f601@sha256:ddcc9ee5cea3adffe814783320b3eb61d9d92d7c973b87d9ca21d40f37f79a67

--- a/components/sn121vhkj-go/overlays/development/deployment-patch.yaml
+++ b/components/sn121vhkj-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sn121vhkj-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/rhtap-qe:f16ff9cf343af98b25898ac35cc3f80af770f601@sha256:ddcc9ee5cea3adffe814783320b3eb61d9d92d7c973b87d9ca21d40f37f79a67
+          name: container-image
